--- a/Sunshine/app/src/main/res/values/arrays.xml
+++ b/Sunshine/app/src/main/res/values/arrays.xml
@@ -14,18 +14,15 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<!-- The menu found in the main multi-day forecast  -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activitis.MainActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="Settings"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_map"
-        android:title="Map Location"
-        app:showAsAction="never" />
-</menu>
+<resources>
+
+    <string-array name="pref_units_options">
+        <item>@string/pref_units_label_metric</item>
+        <item>@string/pref_units_label_imperial</item>
+    </string-array>
+
+    <string-array name="pref_units_values">
+        <item>@string/pref_units_metric</item>
+        <item>@string/pref_units_imperial</item>
+    </string-array>
+</resources>
