--- a/Sunshine/app/src/main/res/values/bools.xml
+++ b/Sunshine/app/src/main/res/values/bools.xml
@@ -14,18 +14,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<!-- The menu found in the main multi-day forecast  -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activitis.MainActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="Settings"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_map"
-        android:title="Map Location"
-        app:showAsAction="never" />
-</menu>
+<resources>
+    <bool name="show_notifications_by_default">true</bool>
+    <bool name="use_today_layout">false</bool>
+</resources>
