--- a/Sunshine/app/src/main/res/layout/activity_detail.xml
+++ b/Sunshine/app/src/main/res/layout/activity_detail.xml
@@ -15,14 +15,16 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1.05">
 
             <LinearLayout
-                android:gravity="center|top"
-                android:layout_weight="1"
+                android:layout_marginBottom="7dp"
+                android:gravity="center|bottom"
+                android:layout_weight="1.8"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
                 <TextView
+                    android:id="@+id/tv_time_date"
                     android:textSize="20sp"
                     android:text="Saturday, September 24"
                     android:layout_width="wrap_content"
@@ -32,7 +34,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_weight="2.5"
+                android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
 
@@ -66,7 +68,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
                 <LinearLayout
@@ -78,7 +80,7 @@
                         android:id="@+id/tv_description_detail"
                         android:fontFamily="sans-serif-light"
                         android:textColor="#727272"
-                        android:textSize="36sp"
+                        android:textSize="20sp"
                         android:text="Rainy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -102,6 +104,13 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -110,6 +119,12 @@
             android:layout_weight="1"
             android:background="#455A64"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_weight="0.2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -118,11 +133,12 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:gravity="center"
+                    android:gravity="center|left"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
                     <TextView
+                        android:layout_marginLeft="35dp"
                         style="@style/DetailLabel"
                         android:text="Humidity"
                         android:layout_width="wrap_content"
@@ -135,6 +151,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
+
                     <TextView
                         android:id="@+id/tv_humidity_detail"
                         style="@style/ExtraWeatherMeasurement"
@@ -154,11 +171,12 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:gravity="center"
+                    android:gravity="center|left"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
                     <TextView
+                        android:layout_marginLeft="35dp"
                         style="@style/DetailLabel"
                         android:text="Pressure"
                         android:layout_width="wrap_content"
@@ -189,11 +207,12 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:gravity="center"
+                    android:gravity="center|left"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
                     <TextView
+                        android:layout_marginLeft="35dp"
                         style="@style/DetailLabel"
                         android:text="Wind"
                         android:layout_width="wrap_content"
@@ -206,6 +225,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
+
                     <TextView
                         android:id="@+id/tv_wind_detail"
                         style="@style/ExtraWeatherMeasurement"
@@ -214,6 +234,13 @@
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_weight="0.2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
 
             </LinearLayout>
 
