--- a/Sunshine/app/src/main/res/layout/activity_setting.xml
+++ b/Sunshine/app/src/main/res/layout/activity_setting.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:name="vn.tranthanhtu.sunshine.activitis.SettingFragment"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/weather_settings_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    tools:context=".activitis.SettingActivity">
+
+
+</RelativeLayout>
