--- a/Sunshine/app/src/main/res/layout/item_next_day_weather.xml
+++ b/Sunshine/app/src/main/res/layout/item_next_day_weather.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="55dp"
+    android:layout_height="59dp"
 
     android:orientation="horizontal">
     <LinearLayout
@@ -30,7 +30,7 @@
             <TextView
                 android:id="@+id/tv_date"
                 android:text="Tomorrow"
-                android:textStyle="bold"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -42,8 +42,9 @@
             android:layout_height="0dp">
             <TextView
                 android:id="@+id/tv_description"
-                android:textColor="#d1b6b6"
+                android:textColor="@color/secondary_text"
                 android:text="Clear"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -57,7 +58,9 @@
         <TextView
             android:id="@+id/tv_temperature_max"
             android:text="17"
-            android:textSize="25sp"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/primary_text"
+            android:textSize="28dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -68,9 +71,9 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/tv_temperature_min"
-            android:textSize="25sp"
+            android:textSize="28dp"
             android:text="13"
-            android:textColor="#d1b6b6"
+            android:fontFamily="sans-serif-light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
