--- a/Sunshine/app/src/main/res/layout/activity_main.xml
+++ b/Sunshine/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     tools:context="vn.tranthanhtu.sunshine.activitis.MainActivity">
     <LinearLayout
         android:background="@color/colorPrimary"
-        android:layout_weight="1.5"
+        android:layout_weight="1.8"
         android:padding="16dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="0dp">
 
         <LinearLayout
-            android:gravity="center"
+            android:gravity="center|top"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp">
@@ -23,6 +23,7 @@
                 android:id="@+id/tv_date_current"
                 android:textColor="@android:color/white"
                 android:text="Today, July 1"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -39,8 +40,8 @@
                 <ImageView
                     android:id="@+id/imv_icon_weather_current"
                     android:src="@drawable/icon_1000"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp" />
+                    android:layout_width="96dp"
+                    android:layout_height="96dp" />
             </LinearLayout>
             <LinearLayout
                 android:gravity="center"
@@ -49,8 +50,9 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_temperature_max_current"
-                    android:textColor="@android:color/white"
-                    android:textSize="55sp"
+                    android:fontFamily="sans-serif-light"
+                    android:textColor="@color/primary_text"
+                    android:textSize="72sp"
                     android:text="18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -71,8 +73,8 @@
                 <TextView
                     android:id="@+id/tv_description_current"
                     android:text="Sunny"
+                    android:textColor="@color/secondary_text"
                     android:textSize="20sp"
-                    android:textColor="@android:color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -83,9 +85,10 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_temperature_min_current"
-                    android:textSize="25sp"
+                    android:textSize="36sp"
                     android:text="13"
-                    android:textColor="@android:color/white"
+                    android:fontFamily="sans-serif-light"
+                    android:textColor="@color/secondary_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
