--- a/Sunshine/app/src/main/res/xml/pref_general.xml
+++ b/Sunshine/app/src/main/res/xml/pref_general.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <EditTextPreference
         android:defaultValue="@string/pref_location_default"
+        android:summary="Ha Noi"
         android:inputType="text"
         android:key="@string/pref_location_key"
         android:singleLine="true"
@@ -13,6 +13,7 @@
 
     <ListPreference
         android:defaultValue="@string/pref_units_metric"
+        android:summary="Metric"
         android:entries="@array/pref_units_options"
         android:entryValues="@array/pref_units_values"
         android:key="@string/pref_units_key"
