--- a/CuderMoveNew/app/src/main/res/layout/activity_main.xml
+++ b/CuderMoveNew/app/src/main/res/layout/activity_main.xml
@@ -360,5 +360,14 @@
         android:layout_marginBottom="83dp"
         android:id="@+id/btn_randomMap"
         tools:ignore="RelativeOverlap" />
+    <Button
+        android:layout_below="@id/btn_randomMap"
+        android:text="@string/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="83dp"
+        android:id="@+id/btn_reset"
+        tools:ignore="RelativeOverlap" />
 
 </RelativeLayout>
