--- a/CuderMoveNew/app/src/main/res/layout/activity_main.xml
+++ b/CuderMoveNew/app/src/main/res/layout/activity_main.xml
@@ -11,91 +11,6 @@
         android:layout_marginTop="31.5dp"
         android:layout_width="31.5dp"
         android:layout_height="wrap_content">
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_1"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_2"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_3"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_4"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_5"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_6"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_7"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_8"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_9"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_10"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_11"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_12"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_13"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-        <!--<TextView-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/_14"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp" />-->
-
 
     </LinearLayout>
 
@@ -106,91 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="31.5dp"
         tools:ignore="RtlHardcoded">
-        <!--<TextView-->
-            <!--android:text="@string/a"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/b"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/c"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/d"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/e"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/f"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/g"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/h"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/i"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/j"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/k"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/l"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/m"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-        <!--<TextView-->
-            <!--android:text="@string/n"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent" />-->
-
     </LinearLayout>
     
     <android.support.v7.widget.RecyclerView
@@ -224,7 +54,7 @@
         android:baselineAligned="false">
         <LinearLayout
             android:orientation="vertical"
-            android:layout_weight="1.1"
+            android:layout_weight="1.3"
             android:layout_width="0dp"
             android:layout_height="match_parent">
             <LinearLayout
@@ -348,7 +178,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="83dp"
         android:id="@+id/btnStart"
         tools:ignore="RelativeOverlap" />
     <Button
@@ -357,7 +186,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="83dp"
         android:id="@+id/btn_randomMap"
         tools:ignore="RelativeOverlap" />
     <Button
@@ -366,8 +194,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="83dp"
         android:id="@+id/btn_reset"
         tools:ignore="RelativeOverlap" />
+    <LinearLayout
+        android:layout_alignParentEnd="true"
+        android:orientation="vertical"
+        android:layout_below="@id/btn_reset"
+        android:id="@+id/ll_numberMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
 
 </RelativeLayout>
